# permission_manager

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  analysis_output.txt  analysis_output_v2.txt  analysis_output_v3.txt  pubspec.yaml
android/: build.gradle  local.properties  settings.gradle
example/: README.md  pubspec.yaml
example/android/: local.properties
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: Package.swift  permission_manager.podspec
ios/Classes/: PermissionManagerPlugin.swift
ios/permission_manager/: Package.swift
lib/: permission_manager.dart  permission_manager_method_channel.dart  permission_manager_platform_interface.dart  permission_manager_types.dart  permission_manager_web.dart
linux/: CMakeLists.txt  permission_manager_plugin.cc  permission_manager_plugin_private.h
linux/test/: permission_manager_plugin_test.cc
macos/: Package.swift  permission_manager.podspec
macos/Classes/: PermissionManagerPlugin.swift
macos/Resources/: PrivacyInfo.xcprivacy
macos/permission_manager/: Package.swift
test/: permission_manager_method_channel_test.dart  permission_manager_test.dart
windows/: CMakeLists.txt  permission_manager_plugin.cpp  permission_manager_plugin.h  permission_manager_plugin_c_api.cpp
windows/include/permission_manager/: permission_manager_plugin_c_api.h
windows/test/: permission_manager_plugin_test.cpp
(+28 files in other folders)
